2010-11-20  Casey Carter   <ctcarter@users.sourceforge.net>

	* demo/html/index.canvas demo/html/index.save demo/html/index.svg 
	term/canvas.trm:  syntax error in link record of standalone mode.

2010-11-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c: save output for "set view" could not be read in

2010-11-12  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc command.c (help_command) util.h:
	"help" was collapsing all text to lower case, which broke "help 3D".
	Remove a vestigial call to lower_case().  Also make sure it is indexed.

2010-10-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3dcolors.dem: Added first page with multiple palettes. Show
	color ranges in [0:1].

2010-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Prevent out-of-range boxes from creating
	degenerate invisible boxes in the output file.  This can reduce file
	size for vector format output.
	Bug #3096750

2010-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_fillstyle):  Allow "border" as a keyword without
	necessarily having an immediately following linetype or color.

2010-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: The AC_CHECK_LIB macro apparently always appends
	to LIBS (despite what the documentation says). We want to accummulate
	libraries in TERMLIBS rather than LIBS, so save and restore LIBS
	around the checks.
	Bug #3093208

2010-10-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Up until now this routine has returned
	the number of lines from which data were read, including lines
	containing undefined points. Change this to return the number of
	well-defined data points.  That way a file of junk is recognized as
	empty if read with either 'using 1:2' or 'using ($1):($2)'.
	Bug #3092435

2010-10-20  Graham Reed  <greed@users.sourceforge.net>

	* configure.in src/alloc.c:  Test at configuration time whether the